basilisk-testnet/parachains/parachain.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hydra-ui-test
  name: parachain-coll-01-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: parachain-coll-01
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: parachain-coll-01
    spec:
      containers:
      - image: 601305236792.dkr.ecr.eu-west-1.amazonaws.com/parachain-test:4.0.0-f4e23da
        resources:
          limits:
            memory: "5000Mi"
            cpu: "3000m"
          requests:
            memory: "4000Mi"
            cpu: "3000m"
        imagePullPolicy: Always
        name: parachain-coll-01
        volumeMounts:
          - mountPath: /tmp
            name: persistent-storage
        command: ["/basilisk/basilisk"]
        args: ["--chain", "/tmp/basilisk-raw.json", "--parachain-id", "200", "--collator", "--base-path", "/basilisk/", "--node-key", "0000000000000000000000000000000000000000000000000000000000000005", "--bootnodes", "/dns/coll-01-svc.hydra-ui-test.svc.cluster.local/tcp/30333/p2p/12D3KooWSuTq6MG9gPt7qZqLFKkYrfxMewTZhj9nmRHJkPwzWDG2", "--", "--chain", "/tmp/westend-live.json", "--base-path", "/basilisk/", "--execution=wasm", "--bootnodes", "/dns/validator01-svc.westend.svc.cluster.local/tcp/30333 [...]
        ports:
        - containerPort: 9944
        - containerPort: 9933
        - containerPort: 30333
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: efs-pv    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hydra-ui-test
  name: parachain-coll-02-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: parachain-coll-02
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: parachain-coll-02
    spec:
      containers:
      - image: 601305236792.dkr.ecr.eu-west-1.amazonaws.com/parachain-test:4.0.0-f4e23da
        resources:
          limits:
            memory: "5000Mi"
            cpu: "3000m"
          requests:
            memory: "4000Mi"
            cpu: "3000m"
        imagePullPolicy: Always
        name: parachain-coll-02
        volumeMounts:
          - mountPath: /tmp
            name: persistent-storage
        command: ["/basilisk/basilisk"]
        args: ["--chain", "/tmp/basilisk-raw.json", "--parachain-id", "200", "--collator", "--base-path", "/basilisk/", "--node-key", "0000000000000000000000000000000000000000000000000000000000000006", "--bootnodes", "/dns/coll-01-svc.hydra-ui-test.svc.cluster.local/tcp/30333/p2p/12D3KooWSuTq6MG9gPt7qZqLFKkYrfxMewTZhj9nmRHJkPwzWDG2", "--", "--chain", "/tmp/westend-live.json", "--base-path", "/basilisk/", "--execution=wasm", "--bootnodes", "/dns/validator01-svc.westend.svc.cluster.local/tcp/30333 [...]
        ports:
        - containerPort: 9944
        - containerPort: 9933
        - containerPort: 30333
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: efs-pv    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hydra-ui-test
  name: parachain-coll-03-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: parachain-coll-03
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: parachain-coll-03
    spec:
      containers:
      - image: 601305236792.dkr.ecr.eu-west-1.amazonaws.com/parachain-test:4.0.0-f4e23da
        resources:
          limits:
            memory: "5000Mi"
            cpu: "3000m"
          requests:
            memory: "4000Mi"
            cpu: "3000m"
        imagePullPolicy: Always
        name: parachain-coll-03
        volumeMounts:
          - mountPath: /tmp
            name: persistent-storage
        command: ["/basilisk/basilisk"]
        args: ["--chain", "/tmp/basilisk-raw.json", "--parachain-id", "200", "--collator", "--base-path", "/basilisk/", "--node-key", "0000000000000000000000000000000000000000000000000000000000000007", "--bootnodes", "/dns/coll-01-svc.hydra-ui-test.svc.cluster.local/tcp/30333/p2p/12D3KooWSuTq6MG9gPt7qZqLFKkYrfxMewTZhj9nmRHJkPwzWDG2", "--", "--chain", "/tmp/westend-live.json", "--base-path", "/basilisk/", "--execution=wasm", "--bootnodes", "/dns/validator01-svc.westend.svc.cluster.local/tcp/30333 [...]
        ports:
        - containerPort: 9944
        - containerPort: 9933
        - containerPort: 30333
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: efs-pv    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hydra-ui-test
  name: public-rpc-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: public-rpc
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: public-rpc
    spec:
      containers:
      - image: 601305236792.dkr.ecr.eu-west-1.amazonaws.com/parachain-test:4.0.0-f4e23da
        resources:
          limits:
            memory: "5000Mi"
            cpu: "3000m"
          requests:
            memory: "4000Mi"
            cpu: "3000m"
        imagePullPolicy: Always
        name: public-rpc
        volumeMounts:
          - mountPath: /tmp
            name: persistent-storage
        command: ["/basilisk/basilisk"]
        args: ["--chain", "/tmp/basilisk-raw.json", "--parachain-id", "200", "--base-path", "/basilisk/", "--bootnodes", "/dns/coll-01-svc.hydra-ui-test.svc.cluster.local/tcp/30333/p2p/12D3KooWSuTq6MG9gPt7qZqLFKkYrfxMewTZhj9nmRHJkPwzWDG2", "--", "--chain", "/tmp/westend-live.json", "--bootnodes", "/dns/validator01-svc.westend.svc.cluster.local/tcp/30333/p2p/12D3KooWEyoppNCUx8Yx66oV9fJnriXwCcXwDDUA2kj6vnc6iDEp", "--base-path", "/basilisk/", "--execution=wasm", "--unsafe-ws-external", ]
        ports:
        - containerPort: 9944
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: efs-pv    
---
apiVersion: v1
kind: Service
metadata:
  namespace: hydra-ui-test
  name: coll-01-svc
spec:
  ports:
    - port: 9944
      name: websocket
      targetPort: 9944
      protocol: TCP
    - port: 30333
      name: custom-port
      targetPort: 30333
      protocol: TCP
    - port: 9933
      name: rpc-port
      targetPort: 9933  
  type: NodePort
  selector:
    app.kubernetes.io/name: parachain-coll-01
---
apiVersion: v1
kind: Service
metadata:
  namespace: hydra-ui-test
  name: coll-02-svc
spec:
  ports:
    - port: 9944
      name: websocket
      targetPort: 9944
      protocol: TCP
    - port: 30333
      name: custom-port
      targetPort: 30333
      protocol: TCP
    - port: 9933
      name: rpc-port
      targetPort: 9933
      protocol: TCP   
  type: NodePort
  selector:
    app.kubernetes.io/name: parachain-coll-02
---
apiVersion: v1
kind: Service
metadata:
  namespace: hydra-ui-test
  name: coll-03-svc
spec:
  ports:
    - port: 9944
      name: websocket
      targetPort: 9944
      protocol: TCP
    - port: 30333
      name: custom-port
      targetPort: 30333
      protocol: TCP  
    - port: 9933
      name: rpc-port
      targetPort: 9933
  type: NodePort
  selector:
    app.kubernetes.io/name: parachain-coll-03
---
apiVersion: v1
kind: Service
metadata:
  namespace: hydra-ui-test
  name: public-rpc-svc
spec:
  ports:
    - port: 80
      name: websocket
      targetPort: 9944
      protocol: TCP
  type: NodePort    
  selector:
    app.kubernetes.io/name: public-rpc
